Update multiselect example input labels to match other examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -168,7 +168,7 @@
         Turn off JavaScript to see the <code>&lt;select multiple&gt;</code> element.
       </p>
       <p>Uses <code>accessibleAutocomplete.enhanceSelectElement</code>.</p>
-      <label for="multiselect-autocomplete-progressiveEnhancement">Select your country</label>
+      <label for="multiselect-autocomplete-progressiveEnhancement">Country</label>
       <div class="autocomplete-wrapper">
         <select multiple id="multiselect-autocomplete-progressiveEnhancement">
           <option value="fr">France</option>
@@ -185,7 +185,7 @@
         "data-hello": "hey",
         "data-goodbye": "bye"
       } }</code> options.</p>
-      <label for="autocomplete-custom-attributes">Select your country</label>
+      <label for="autocomplete-custom-attributes">Country</label>
       <div id="custom-attributes" class="autocomplete-wrapper"></div>
     </main>
 
